Updated ground image as moon surface. Collision detection logic now fully complete for both obstacle & food."

--- a/index.html
+++ b/index.html
@@ -11,15 +11,16 @@
 </head>
 <body>
   <div class="title">
-    <h1>Oliver's Outer Space Dreamin'</h1>
+    <h1>Oliver's Outer Space Dream</h1>
   </div>
   <div class="wrapper">
     <canvas id="canvas" width="600px" height="360px">
-    <!-- <canvas id="background-canvas"></canvas>
-    <canvas id="foreground-canvas"></canvas> -->
       <p>Your browser does not support the required functionality to play this game.</p>
       <p>Please update to a modern browser such as <a href="www.google.com/chrome/‎">Google Chrome</a> to play.</p>
     </canvas>
+    <!-- <audio id="background-music" preload="auto" src="./assets/sounds/background.mp3">
+    </audio> -->
   </div>
+  <button>Mute</button>
 </body>
 </html>
