--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
   <link rel="stylesheet" type="text/css" media="screen" href="./assets/stylesheets/oosd.css">
   <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
   <script type="text/javascript" src="./bundle.js"></script>
-  <script src="bundle.js"></script>
 </head>
 <body>
   <div class="title">
@@ -21,6 +20,7 @@
     <!-- <audio id="background-music" preload="auto" src="./assets/sounds/background.mp3">
     </audio> -->
   </div>
-  <button>Mute</button>
+  <button id="sound-btn">Mute</button>
+  <!-- <div id="game-over-screen">GAME OVER YOU WOKE UP OLIVER FROM HIS DREAM :(</div> -->
 </body>
 </html>
