Updated styling. Added point sound. Adding menu screen now.

--- a/index.html
+++ b/index.html
@@ -15,12 +15,24 @@
     </div>
   </div>
   <div id="game-area">
+    <img src="./assets/images/browser-background.png" class="browser-background">
     <img src="./assets/images/game_frame.png" class="game-frame">
     <canvas id="canvas" width="600px" height="360px">
       <p>Your browser does not support the required functionality to play this game.</p>
       <p>Please update to a modern browser such as <a href="www.google.com/chrome/‎">Google Chrome</a> to play.</p>
     </canvas>
-    <button id="sound-btn"><img src="https://s-media-cache-ak0.pinimg.com/originals/56/90/44/569044e6883e72221c6b81164d111c91.png" class="music-note"></button>
+    <button id="sound-btn">
+      <img src="./assets/images/music_note.png" class="music-note">
+    </button>
+  </div>
+  <img src="./assets/images/bubble.png" class="thought-bubbles">
+  <img src="./assets/images/oliver.png" class="oliver">
+  <img src="./assets/images/snooze.gif" class="snooze">
+
+  <div id="icon-container">
+    <a href="https://katsiu.com" target="_blank"><img src="./assets/images/ks_logo.png" width="30" /></a><br />
+    <a href="https://github.com/kat-siu" target="_blank"><img src="./assets/images/github.png" width="30" /></a><br />
+    <a href="https://www.linkedin.com/in/katsiu/" target="_blank"><img src="./assets/images/linkedin.png" width="30" /></a><br />
   </div>
 </body>
 </html>
