Added Menu screen. Updated styling on game over/pause screens.

--- a/index.html
+++ b/index.html
@@ -28,6 +28,16 @@
   <img src="./assets/images/bubble.png" class="thought-bubbles">
   <img src="./assets/images/oliver.png" class="oliver">
   <img src="./assets/images/snooze.gif" class="snooze">
+  <div id="instructions">
+    <p>Oliver's doing what he does best - cat napping! He's dreaming of being weightless in outer space, eating an endless amount of sushi and drumsticks. It's up to you to fulfill his dream. Don't hit the oncoming obstacles, or Oliver will wake up and be very angry...</p>
+    <hr>
+    <ul>
+      <li>Press 'space' to jump</li>
+      <li>Press 's' to start game</li>
+      <li>Press 'p' to pause</li>
+      <li>Press 'r' to restart on game over</li>
+    </ul>
+  </div>
 
   <div id="icon-container">
     <a href="https://katsiu.com" target="_blank"><img src="./assets/images/ks_logo.png" width="30" /></a><br />
