Updated styling. Fixed collision detection buffer.

--- a/index.html
+++ b/index.html
@@ -26,17 +26,21 @@
     </button>
   </div>
   <img src="./assets/images/bubble.png" class="thought-bubbles">
-  <img src="./assets/images/oliver.png" class="oliver">
+  <a href="https://www.instagram.com/hungryhungryoliver/" target="_blank"><img src="./assets/images/oliver.png" class="oliver"></a>
   <img src="./assets/images/snooze.gif" class="snooze">
   <div id="instructions">
-    <p>Oliver's doing what he does best - cat napping! He's dreaming of being weightless in outer space, eating an endless amount of sushi and drumsticks. It's up to you to fulfill his dream. Don't hit the oncoming obstacles, or Oliver will wake up and be very angry...</p>
-    <hr>
-    <ul>
+    <!-- <p>It's up to *YOU* to fulfill Oliver's dream of being weightless in outer space, eating an endless amount of sushi and drumsticks. Avoid the asteroids, or Oliver will be one unhappy kitty...</p>
+    <hr> -->
+    <!-- <ul>
       <li>Press 'space' to jump</li>
       <li>Press 's' to start game</li>
       <li>Press 'p' to pause</li>
       <li>Press 'r' to restart on game over</li>
-    </ul>
+    </ul> -->
+    <!-- <img src="./assets/images/keyboard.png" class="keyboard"> -->
+    <span class="hiddentxt-about"><a href="#">About</a></span><span class="hiddenimg-about">It's up to *YOU* to fulfill Oliver's dream of being weightless in outer space, eating an endless amount of sushi and drumsticks. Keep afloat by pressing/holding the *SPACE BAR*. Avoid the asteroids, or Oliver will be one unhappy kitty if he's awoken...</span><br/>
+
+    <span class="hiddentxt-controls"><a href="#">Controls</a></span><span class="hiddenimg-controls"><img src="./assets/images/keyboard.png" width="400px" /></span>
   </div>
 
   <div id="icon-container">
