--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
   <meta charset="UTF-8">
-  <title>Oliver's Outer Space Dreamin'</title>
+  <title>Oliver's Outer Space Dream</title>
   <link rel="stylesheet" type="text/css" href="./assets/stylesheets/reset.css" />
   <link rel="stylesheet" type="text/css" media="screen" href="./assets/stylesheets/oosd.css">
   <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
