--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       <li>Press 'r' to restart on game over</li>
     </ul> -->
     <!-- <img src="./assets/images/keyboard.png" class="keyboard"> -->
-    <span class="hiddentxt-about"><a href="#">About</a></span><span class="hiddenimg-about">It's up to *YOU* to fulfill Oliver's dream of being weightless in outer space, eating an endless amount of sushi and drumsticks. Keep afloat by pressing/holding the *SPACE BAR*. Avoid the asteroids, or Oliver will be one unhappy kitty if he's awoken...</span><br/>
+    <span class="hiddentxt-about"><a href="#">About</a></span><span class="hiddenimg-about">Oliver dreams of floating weightlessly in outer space, eating all the sushi and drumsticks that fill his heart with content. It's up to *YOU* to get as many food items as you can! Keep afloat by pressing/holding the *SPACE BAR*. Avoid the asteroids, or Oliver will be one angry cat if he's awoken...</span><br/>
 
     <span class="hiddentxt-controls"><a href="#">Controls</a></span><span class="hiddenimg-controls"><img src="./assets/images/keyboard.png" width="400px" /></span>
   </div>
