Fixed about and controls styling. Updated about text.

--- a/index.html
+++ b/index.html
@@ -39,9 +39,12 @@
       <li>Press 'r' to restart on game over</li>
     </ul> -->
     <!-- <img src="./assets/images/keyboard.png" class="keyboard"> -->
-    <span class="hiddentxt-about"><a href="#">About</a></span><span class="hiddenimg-about">Oliver dreams of floating weightlessly in outer space, eating all the sushi and drumsticks that fill his heart with content. It's up to *YOU* to get as many food items as you can! Keep afloat by pressing/holding the *SPACE BAR*. Avoid the asteroids, or Oliver will be one angry cat if he's awoken...</span><br/>
-
-    <span class="hiddentxt-controls"><a href="#">Controls</a></span><span class="hiddenimg-controls"><img src="./assets/images/keyboard.png" width="400px" /></span>
+    <div class="about">
+      <span class="hiddentxt-about"><a href="#">About</a></span><span class="hiddenimg-about">Oliver dreams of floating weightlessly in outer space, eating all the sushi & drumsticks that fill his heart with content. It's up to *YOU* to get as many food items as you can to increase your score! Keep afloat by pressing/holding the *SPACE BAR*. Avoid the asteroids, or Oliver will be one angry cat if he's awoken...</span>
+    </div>
+    <div class="controls">
+      <span class="hiddentxt-controls"><a href="#">Controls</a></span><span class="hiddenimg-controls"><img src="./assets/images/keyboard.png" width="400px" /></span>
+    </div>
   </div>
 
   <div id="icon-container">
