Updated collision buffer. Fixed default name in score board.

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
      <div class="name-input">
        Enter your name:
        <br/>
-       <input type="text" id="user-name" placeholder="Oliver" defaultValue="Oliver" maxlength="15"/>
+       <input type="text" id="user-name" placeholder="Oliver" maxlength="15"/>
        <p id="name-feedback"></p>
      </div>
    </div>
@@ -73,6 +73,6 @@
     src="https://www.statcounter.com/counter/counter.js"
     async>
   </script>
-  
+
 </body>
 </html>
