Updated github link to actual repo

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
   <div id="icon-container">
     <a href="https://katsiu.com" target="_blank"><img src="./assets/images/ks_logo.png" width="30" /></a><br />
-    <a href="https://github.com/kat-siu" target="_blank"><img src="./assets/images/github.png" width="30" /></a><br />
+    <a href="https://github.com/kat-siu/olivers-outer-space-dreamin" target="_blank"><img src="./assets/images/github.png" width="30" /></a><br />
     <a href="https://www.linkedin.com/in/katsiu/" target="_blank"><img src="./assets/images/linkedin.png" width="30" /></a><br />
   </div>
 
